// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Grid demo -- col 1`] = `
.emotion-62 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 8.33333333%;
}

.emotion-60 .uc-fe-form-item {
  margin-bottom: 16px;
}

.emotion-60 .uc-fe-form-item:last-child {
  margin-bottom: 0;
}

.emotion-13 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.emotion-13:before,
.emotion-13:after {
  content: ' ';
  display: table;
}

.emotion-13:after {
  clear: both;
}

.emotion-13 > .uc-fe-col {
  padding-left: 8px;
  padding-right: 8px;
}

.emotion-1 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 16.66666667%;
  padding-top: 4px;
  line-height: 20px;
  word-break: break-all;
}

.emotion-10 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 83.33333333%;
}

.emotion-10 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 83.33333333%;
}

.emotion-7 {
  position: relative;
  box-sizing: border-box;
  border-radius: 2px;
  color: #0a1633;
  height: 28px;
  display: inline-block;
  vertical-align: middle;
  border: 1px solid #d2d6ea;
  padding-right: 22px;
  border-right-width: 0;
}

.emotion-7 .uc-fe-numberinput-input-wrap {
  position: relative;
}

.emotion-7 .uc-fe-numberinput-input {
  border: none;
  outline: none;
  padding: 0;
  margin: 0;
  color: inherit;
}

.emotion-7 .uc-fe-numberinput-suffix {
  color: #7a8baa;
  margin: 0 4px;
  display: inline-block;
  vertical-align: middle;
}

.emotion-7 .uc-fe-numberinput-handler-up,
.emotion-7 .uc-fe-numberinput-handler-down {
  position: absolute;
  box-sizing: border-box;
  text-align: center;
  border-radius: 2px;
  border-style: solid;
  cursor: pointer;
  color: #0a1633;
  border-color: #d2d6ea;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.08),0 1px 1px -1px rgba(0,0,0,0.30),0 1px 3px -1px rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.05);
  background: #ffffff;
  display: inline-block;
  vertical-align: middle;
}

.emotion-7 .uc-fe-numberinput-handler-up:hover,
.emotion-7 .uc-fe-numberinput-handler-down:hover {
  color: #3860f4;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05);
}

.emotion-7 .uc-fe-numberinput-handler-up.uc-fe-numberinput-handler-disabled,
.emotion-7 .uc-fe-numberinput-handler-down.uc-fe-numberinput-handler-disabled {
  cursor: not-allowed;
  pointer-events: none;
  color: #cccccc;
  border-color: #c3cad9;
}

.emotion-7 .uc-fe-numberinput-input {
  line-height: 26px;
  height: 26px;
  display: inline-block;
  vertical-align: middle;
}

.emotion-7 .uc-fe-numberinput-input::-webkit-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-7 .uc-fe-numberinput-input::-moz-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-7 .uc-fe-numberinput-input:-ms-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-7 .uc-fe-numberinput-input::placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-7:hover {
  border-color: #c3cad9;
}

.emotion-7 .uc-fe-numberinput-input-wrap {
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #fafafc;
}

.emotion-7 .uc-fe-numberinput-input-wrap:hover {
  background: #f6f6fb;
}

.emotion-7 .uc-fe-numberinput-input {
  padding: 0 0 0 8px;
  text-align: left;
  box-shadow: none;
  background: transparent;
  width: 34px;
}

.emotion-7 .uc-fe-numberinput-handler-up,
.emotion-7 .uc-fe-numberinput-handler-down {
  right: 0;
  box-sizing: content-box;
  border-radius: 0;
  height: 13px;
  line-height: 13px;
  width: 22px;
}

.emotion-7 .uc-fe-numberinput-handler-up:hover,
.emotion-7 .uc-fe-numberinput-handler-down:hover {
  color: #3860f4;
}

.emotion-7 .uc-fe-numberinput-handler-up {
  border-width: 0 0 0 1px;
  top: -1px;
  padding-top: 1px;
}

.emotion-7 .uc-fe-numberinput-handler-down {
  border-width: 1px 0 0 1px;
  bottom: 0;
  border-top-color: #c3cad9;
}

.emotion-3 {
  vertical-align: baseline;
}

.emotion-68 {
  position: relative;
  display: block;
  height: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row wrap;
  -ms-flex-flow: row wrap;
  flex-flow: row wrap;
  margin-left: -8px;
  margin-right: -8px;
}

.emotion-68 > .uc-fe-col {
  padding-left: 8px;
  padding-right: 8px;
}

.emotion-64 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 8.33333333%;
}

.emotion-62 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 8.33333333%;
}

.emotion-60 .uc-fe-form-item {
  margin-bottom: 16px;
}

.emotion-60 .uc-fe-form-item:last-child {
  margin-bottom: 0;
}

.emotion-13 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.emotion-13:before,
.emotion-13:after {
  content: ' ';
  display: table;
}

.emotion-13:after {
  clear: both;
}

.emotion-13 > .uc-fe-col {
  padding-left: 8px;
  padding-right: 8px;
}

.emotion-1 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 16.66666667%;
  padding-top: 4px;
  line-height: 20px;
  word-break: break-all;
}

.emotion-10 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 83.33333333%;
}

.emotion-10 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 83.33333333%;
}

.emotion-7 {
  position: relative;
  box-sizing: border-box;
  border-radius: 2px;
  color: #0a1633;
  height: 28px;
  display: inline-block;
  vertical-align: middle;
  border: 1px solid #d2d6ea;
  padding-right: 22px;
  border-right-width: 0;
}

.emotion-7 .uc-fe-numberinput-input-wrap {
  position: relative;
}

.emotion-7 .uc-fe-numberinput-input {
  border: none;
  outline: none;
  padding: 0;
  margin: 0;
  color: inherit;
}

.emotion-7 .uc-fe-numberinput-suffix {
  color: #7a8baa;
  margin: 0 4px;
  display: inline-block;
  vertical-align: middle;
}

.emotion-7 .uc-fe-numberinput-handler-up,
.emotion-7 .uc-fe-numberinput-handler-down {
  position: absolute;
  box-sizing: border-box;
  text-align: center;
  border-radius: 2px;
  border-style: solid;
  cursor: pointer;
  color: #0a1633;
  border-color: #d2d6ea;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.08),0 1px 1px -1px rgba(0,0,0,0.30),0 1px 3px -1px rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.05);
  background: #ffffff;
  display: inline-block;
  vertical-align: middle;
}

.emotion-7 .uc-fe-numberinput-handler-up:hover,
.emotion-7 .uc-fe-numberinput-handler-down:hover {
  color: #3860f4;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05);
}

.emotion-7 .uc-fe-numberinput-handler-up.uc-fe-numberinput-handler-disabled,
.emotion-7 .uc-fe-numberinput-handler-down.uc-fe-numberinput-handler-disabled {
  cursor: not-allowed;
  pointer-events: none;
  color: #cccccc;
  border-color: #c3cad9;
}

.emotion-7 .uc-fe-numberinput-input {
  line-height: 26px;
  height: 26px;
  display: inline-block;
  vertical-align: middle;
}

.emotion-7 .uc-fe-numberinput-input::-webkit-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-7 .uc-fe-numberinput-input::-moz-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-7 .uc-fe-numberinput-input:-ms-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-7 .uc-fe-numberinput-input::placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-7:hover {
  border-color: #c3cad9;
}

.emotion-7 .uc-fe-numberinput-input-wrap {
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #fafafc;
}

.emotion-7 .uc-fe-numberinput-input-wrap:hover {
  background: #f6f6fb;
}

.emotion-7 .uc-fe-numberinput-input {
  padding: 0 0 0 8px;
  text-align: left;
  box-shadow: none;
  background: transparent;
  width: 34px;
}

.emotion-7 .uc-fe-numberinput-handler-up,
.emotion-7 .uc-fe-numberinput-handler-down {
  right: 0;
  box-sizing: content-box;
  border-radius: 0;
  height: 13px;
  line-height: 13px;
  width: 22px;
}

.emotion-7 .uc-fe-numberinput-handler-up:hover,
.emotion-7 .uc-fe-numberinput-handler-down:hover {
  color: #3860f4;
}

.emotion-7 .uc-fe-numberinput-handler-up {
  border-width: 0 0 0 1px;
  top: -1px;
  padding-top: 1px;
}

.emotion-7 .uc-fe-numberinput-handler-down {
  border-width: 1px 0 0 1px;
  bottom: 0;
  border-top-color: #c3cad9;
}

.emotion-3 {
  vertical-align: baseline;
}

.emotion-68 {
  position: relative;
  display: block;
  height: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row wrap;
  -ms-flex-flow: row wrap;
  flex-flow: row wrap;
  margin-left: -8px;
  margin-right: -8px;
}

.emotion-68 > .uc-fe-col {
  padding-left: 8px;
  padding-right: 8px;
}

.emotion-64 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 8.33333333%;
}

<div>
  <form
    class="uc-fe-form demo-form emotion-60 emotion-61"
  >
    <div
      class="uc-fe-row uc-fe-form-item emotion-12 emotion-13 emotion-14"
    >
      <div
        class="uc-fe-col uc-fe-form-label emotion-0 emotion-1 emotion-2"
        span="2"
      >
        span
      </div>
      <div
        class="uc-fe-col uc-fe-form-controller emotion-9 emotion-10 emotion-2"
        span="10"
      >
        <div
          class="uc-fe-numberinput uc-fe-numberinput-styletype-default emotion-7 emotion-8"
        >
          <div>
            <span
              class="uc-fe-numberinput-handler-up"
              unselectable="unselectable"
            >
              <i
                class="uc-fe-icon icon__caret-up emotion-3 emotion-4"
              />
            </span>
            <span
              class="uc-fe-numberinput-handler-down"
              unselectable="unselectable"
            >
              <i
                class="uc-fe-icon icon__caret-down emotion-3 emotion-4"
              />
            </span>
          </div>
          <div
            class="uc-fe-numberinput-input-wrap"
          >
            <input
              autocomplete="off"
              class="uc-fe-numberinput-input"
              max="12"
              min="0"
              step="1"
              value="1"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="uc-fe-row uc-fe-form-item emotion-12 emotion-13 emotion-14"
    >
      <div
        class="uc-fe-col uc-fe-form-label emotion-0 emotion-1 emotion-2"
        span="2"
      >
        offset
      </div>
      <div
        class="uc-fe-col uc-fe-form-controller emotion-9 emotion-10 emotion-2"
        span="10"
      >
        <div
          class="uc-fe-numberinput uc-fe-numberinput-styletype-default emotion-7 emotion-8"
        >
          <div>
            <span
              class="uc-fe-numberinput-handler-up"
              unselectable="unselectable"
            >
              <i
                class="uc-fe-icon icon__caret-up emotion-3 emotion-4"
              />
            </span>
            <span
              class="uc-fe-numberinput-handler-down uc-fe-numberinput-handler-disabled"
              disabled=""
              unselectable="unselectable"
            >
              <i
                class="uc-fe-icon icon__caret-down emotion-3 emotion-4"
              />
            </span>
          </div>
          <div
            class="uc-fe-numberinput-input-wrap"
          >
            <input
              autocomplete="off"
              class="uc-fe-numberinput-input"
              max="12"
              min="0"
              step="1"
              value="0"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="uc-fe-row uc-fe-form-item emotion-12 emotion-13 emotion-14"
    >
      <div
        class="uc-fe-col uc-fe-form-label emotion-0 emotion-1 emotion-2"
        span="2"
      >
        pull
      </div>
      <div
        class="uc-fe-col uc-fe-form-controller emotion-9 emotion-10 emotion-2"
        span="10"
      >
        <div
          class="uc-fe-numberinput uc-fe-numberinput-styletype-default emotion-7 emotion-8"
        >
          <div>
            <span
              class="uc-fe-numberinput-handler-up"
              unselectable="unselectable"
            >
              <i
                class="uc-fe-icon icon__caret-up emotion-3 emotion-4"
              />
            </span>
            <span
              class="uc-fe-numberinput-handler-down uc-fe-numberinput-handler-disabled"
              disabled=""
              unselectable="unselectable"
            >
              <i
                class="uc-fe-icon icon__caret-down emotion-3 emotion-4"
              />
            </span>
          </div>
          <div
            class="uc-fe-numberinput-input-wrap"
          >
            <input
              autocomplete="off"
              class="uc-fe-numberinput-input"
              max="12"
              min="0"
              step="1"
              value="0"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="uc-fe-row uc-fe-form-item emotion-12 emotion-13 emotion-14"
    >
      <div
        class="uc-fe-col uc-fe-form-label emotion-0 emotion-1 emotion-2"
        span="2"
      >
        push
      </div>
      <div
        class="uc-fe-col uc-fe-form-controller emotion-9 emotion-10 emotion-2"
        span="10"
      >
        <div
          class="uc-fe-numberinput uc-fe-numberinput-styletype-default emotion-7 emotion-8"
        >
          <div>
            <span
              class="uc-fe-numberinput-handler-up"
              unselectable="unselectable"
            >
              <i
                class="uc-fe-icon icon__caret-up emotion-3 emotion-4"
              />
            </span>
            <span
              class="uc-fe-numberinput-handler-down uc-fe-numberinput-handler-disabled"
              disabled=""
              unselectable="unselectable"
            >
              <i
                class="uc-fe-icon icon__caret-down emotion-3 emotion-4"
              />
            </span>
          </div>
          <div
            class="uc-fe-numberinput-input-wrap"
          >
            <input
              autocomplete="off"
              class="uc-fe-numberinput-input"
              max="12"
              min="0"
              step="1"
              value="0"
            />
          </div>
        </div>
      </div>
    </div>
  </form>
  <div
    style="padding:10px 0;border:1px solid #ccc"
  >
    <div
      class="uc-fe-row emotion-68 emotion-14"
      type="flex"
    >
      <div
        class="uc-fe-col emotion-62 emotion-2"
        span="1"
      >
        <div
          style="background:#888;height:20px;border:1px solid #111"
        />
      </div>
      <div
        class="uc-fe-col emotion-64 emotion-2"
        offset="0"
        span="1"
        style="z-index:10"
      >
        <div
          style="background:red;height:20px;border:1px solid #111;text-align:center;line-height:20px;color:white"
        >
          target
        </div>
      </div>
      <div
        class="uc-fe-col emotion-62 emotion-2"
        span="1"
      >
        <div
          style="background:#888;height:20px;border:1px solid #111"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Grid demo -- col-offset 1`] = `
.emotion-2 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.emotion-2:before,
.emotion-2:after {
  content: ' ';
  display: table;
}

.emotion-2:after {
  clear: both;
}

.emotion-2 > .uc-fe-col {
  padding-left: 8px;
  padding-right: 8px;
}

.emotion-0 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 16.66666667%;
  margin-left: 8.33333333%;
}

.emotion-4 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 16.66666667%;
  margin-left: 16.66666667%;
}

.emotion-8 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 16.66666667%;
  margin-left: 25%;
}

.emotion-12 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 16.66666667%;
  margin-left: 33.33333333%;
}

.emotion-2 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.emotion-2:before,
.emotion-2:after {
  content: ' ';
  display: table;
}

.emotion-2:after {
  clear: both;
}

.emotion-2 > .uc-fe-col {
  padding-left: 8px;
  padding-right: 8px;
}

.emotion-0 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 16.66666667%;
  margin-left: 8.33333333%;
}

.emotion-4 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 16.66666667%;
  margin-left: 16.66666667%;
}

.emotion-8 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 16.66666667%;
  margin-left: 25%;
}

.emotion-12 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 16.66666667%;
  margin-left: 33.33333333%;
}

<div>
  <div
    class="uc-fe-row emotion-2 emotion-3"
    style="margin-bottom:10px"
  >
    <div
      class="uc-fe-col emotion-0 emotion-1"
      offset="1"
      span="2"
    >
      <div
        style="background:#888;height:20px;line-height:20px;border:1px solid #111;font-size:14px;color:#FFF;text-align:center"
      >
        offset: 1
      </div>
    </div>
  </div>
  <div
    class="uc-fe-row emotion-2 emotion-3"
    style="margin-bottom:10px"
  >
    <div
      class="uc-fe-col emotion-4 emotion-1"
      offset="2"
      span="2"
    >
      <div
        style="background:#888;height:20px;line-height:20px;border:1px solid #111;font-size:14px;color:#FFF;text-align:center"
      >
        offset: 2
      </div>
    </div>
  </div>
  <div
    class="uc-fe-row emotion-2 emotion-3"
    style="margin-bottom:10px"
  >
    <div
      class="uc-fe-col emotion-8 emotion-1"
      offset="3"
      span="2"
    >
      <div
        style="background:#888;height:20px;line-height:20px;border:1px solid #111;font-size:14px;color:#FFF;text-align:center"
      >
        offset: 3
      </div>
    </div>
  </div>
  <div
    class="uc-fe-row emotion-2 emotion-3"
    style="margin-bottom:10px"
  >
    <div
      class="uc-fe-col emotion-12 emotion-1"
      offset="4"
      span="2"
    >
      <div
        style="background:#888;height:20px;line-height:20px;border:1px solid #111;font-size:14px;color:#FFF;text-align:center"
      >
        offset: 4
      </div>
    </div>
  </div>
</div>
`;

exports[`Grid demo -- col-order 1`] = `
.emotion-8 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.emotion-8:before,
.emotion-8:after {
  content: ' ';
  display: table;
}

.emotion-8:after {
  clear: both;
}

.emotion-8 > .uc-fe-col {
  padding-left: 8px;
  padding-right: 8px;
}

.emotion-0 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 16.66666667%;
  -webkit-order: 4;
  -ms-flex-order: 4;
  order: 4;
}

.emotion-2 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 16.66666667%;
  -webkit-order: 3;
  -ms-flex-order: 3;
  order: 3;
}

.emotion-4 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 16.66666667%;
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
}

.emotion-6 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 16.66666667%;
  -webkit-order: 1;
  -ms-flex-order: 1;
  order: 1;
}

.emotion-8 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.emotion-8:before,
.emotion-8:after {
  content: ' ';
  display: table;
}

.emotion-8:after {
  clear: both;
}

.emotion-8 > .uc-fe-col {
  padding-left: 8px;
  padding-right: 8px;
}

.emotion-0 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 16.66666667%;
  -webkit-order: 4;
  -ms-flex-order: 4;
  order: 4;
}

.emotion-2 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 16.66666667%;
  -webkit-order: 3;
  -ms-flex-order: 3;
  order: 3;
}

.emotion-4 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 16.66666667%;
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
}

.emotion-6 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 16.66666667%;
  -webkit-order: 1;
  -ms-flex-order: 1;
  order: 1;
}

<div>
  <div
    class="uc-fe-row emotion-8 emotion-9"
    style="margin-bottom:10px"
  >
    <div
      class="uc-fe-col emotion-0 emotion-1"
      order="4"
      span="2"
    >
      <div
        style="background:#888;height:20px;line-height:20px;border:1px solid #111;font-size:14px;color:#FFF;text-align:center"
      >
        order: 4, i: 0
      </div>
    </div>
    <div
      class="uc-fe-col emotion-2 emotion-1"
      order="3"
      span="2"
    >
      <div
        style="background:#888;height:20px;line-height:20px;border:1px solid #111;font-size:14px;color:#FFF;text-align:center"
      >
        order: 3, i: 1
      </div>
    </div>
    <div
      class="uc-fe-col emotion-4 emotion-1"
      order="2"
      span="2"
    >
      <div
        style="background:#888;height:20px;line-height:20px;border:1px solid #111;font-size:14px;color:#FFF;text-align:center"
      >
        order: 2, i: 2
      </div>
    </div>
    <div
      class="uc-fe-col emotion-6 emotion-1"
      order="1"
      span="2"
    >
      <div
        style="background:#888;height:20px;line-height:20px;border:1px solid #111;font-size:14px;color:#FFF;text-align:center"
      >
        order: 1, i: 3
      </div>
    </div>
  </div>
</div>
`;

exports[`Grid demo -- col-pullAndPush 1`] = `
.emotion-8 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.emotion-8:before,
.emotion-8:after {
  content: ' ';
  display: table;
}

.emotion-8:after {
  clear: both;
}

.emotion-8 > .uc-fe-col {
  padding-left: 8px;
  padding-right: 8px;
}

.emotion-0 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 16.66666667%;
  right: 8.33333333%;
}

.emotion-2 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 16.66666667%;
  right: 16.66666667%;
}

.emotion-4 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 16.66666667%;
  right: 25%;
}

.emotion-6 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 16.66666667%;
  right: 33.33333333%;
}

.emotion-10 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 16.66666667%;
  left: 8.33333333%;
}

.emotion-12 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 16.66666667%;
  left: 16.66666667%;
}

.emotion-14 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 16.66666667%;
  left: 25%;
}

.emotion-16 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 16.66666667%;
  left: 33.33333333%;
}

.emotion-8 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.emotion-8:before,
.emotion-8:after {
  content: ' ';
  display: table;
}

.emotion-8:after {
  clear: both;
}

.emotion-8 > .uc-fe-col {
  padding-left: 8px;
  padding-right: 8px;
}

.emotion-0 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 16.66666667%;
  right: 8.33333333%;
}

.emotion-2 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 16.66666667%;
  right: 16.66666667%;
}

.emotion-4 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 16.66666667%;
  right: 25%;
}

.emotion-6 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 16.66666667%;
  right: 33.33333333%;
}

.emotion-10 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 16.66666667%;
  left: 8.33333333%;
}

.emotion-12 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 16.66666667%;
  left: 16.66666667%;
}

.emotion-14 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 16.66666667%;
  left: 25%;
}

.emotion-16 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 16.66666667%;
  left: 33.33333333%;
}

<div>
  <div
    class="uc-fe-row emotion-8 emotion-9"
    style="margin-bottom:10px"
  >
    <div
      class="uc-fe-col emotion-0 emotion-1"
      span="2"
    >
      <div
        style="background:#888;height:20px;line-height:20px;border:1px solid #111;font-size:14px;color:#FFF;text-align:center"
      >
        pull: 1
      </div>
    </div>
    <div
      class="uc-fe-col emotion-2 emotion-1"
      span="2"
    >
      <div
        style="background:#888;height:20px;line-height:20px;border:1px solid #111;font-size:14px;color:#FFF;text-align:center"
      >
        pull: 2
      </div>
    </div>
    <div
      class="uc-fe-col emotion-4 emotion-1"
      span="2"
    >
      <div
        style="background:#888;height:20px;line-height:20px;border:1px solid #111;font-size:14px;color:#FFF;text-align:center"
      >
        pull: 3
      </div>
    </div>
    <div
      class="uc-fe-col emotion-6 emotion-1"
      span="2"
    >
      <div
        style="background:#888;height:20px;line-height:20px;border:1px solid #111;font-size:14px;color:#FFF;text-align:center"
      >
        pull: 4
      </div>
    </div>
  </div>
  <div
    class="uc-fe-row emotion-8 emotion-9"
    style="margin-bottom:10px"
  >
    <div
      class="uc-fe-col emotion-10 emotion-1"
      span="2"
    >
      <div
        style="background:#888;height:20px;line-height:20px;border:1px solid #111;font-size:14px;color:#FFF;text-align:center"
      >
        push: 1
      </div>
    </div>
    <div
      class="uc-fe-col emotion-12 emotion-1"
      span="2"
    >
      <div
        style="background:#888;height:20px;line-height:20px;border:1px solid #111;font-size:14px;color:#FFF;text-align:center"
      >
        push: 2
      </div>
    </div>
    <div
      class="uc-fe-col emotion-14 emotion-1"
      span="2"
    >
      <div
        style="background:#888;height:20px;line-height:20px;border:1px solid #111;font-size:14px;color:#FFF;text-align:center"
      >
        push: 3
      </div>
    </div>
    <div
      class="uc-fe-col emotion-16 emotion-1"
      span="2"
    >
      <div
        style="background:#888;height:20px;line-height:20px;border:1px solid #111;font-size:14px;color:#FFF;text-align:center"
      >
        push: 4
      </div>
    </div>
  </div>
</div>
`;

exports[`Grid demo -- col-span 1`] = `
.emotion-16 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.emotion-16:before,
.emotion-16:after {
  content: ' ';
  display: table;
}

.emotion-16:after {
  clear: both;
}

.emotion-16 > .uc-fe-col {
  padding-left: 8px;
  padding-right: 8px;
}

.emotion-0 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 8.33333333%;
}

.emotion-2 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 16.66666667%;
}

.emotion-4 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 25%;
}

.emotion-6 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 33.33333333%;
}

.emotion-8 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 41.66666667%;
}

.emotion-10 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 50%;
}

.emotion-12 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 58.33333333%;
}

.emotion-14 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 66.66666667%;
}

.emotion-16 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.emotion-16:before,
.emotion-16:after {
  content: ' ';
  display: table;
}

.emotion-16:after {
  clear: both;
}

.emotion-16 > .uc-fe-col {
  padding-left: 8px;
  padding-right: 8px;
}

.emotion-0 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 8.33333333%;
}

.emotion-2 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 16.66666667%;
}

.emotion-4 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 25%;
}

.emotion-6 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 33.33333333%;
}

.emotion-8 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 41.66666667%;
}

.emotion-10 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 50%;
}

.emotion-12 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 58.33333333%;
}

.emotion-14 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 66.66666667%;
}

<div>
  <div
    class="uc-fe-row emotion-16 emotion-17"
  >
    <div
      class="uc-fe-col emotion-0 emotion-1"
      span="1"
    >
      <div
        style="background:#888;height:20px;line-height:20px;border:1px solid #111;margin-bottom:10px;font-size:14px;color:#FFF;text-align:center"
      >
        span: 1
      </div>
    </div>
    <div
      class="uc-fe-col emotion-2 emotion-1"
      span="2"
    >
      <div
        style="background:#888;height:20px;line-height:20px;border:1px solid #111;margin-bottom:10px;font-size:14px;color:#FFF;text-align:center"
      >
        span: 2
      </div>
    </div>
    <div
      class="uc-fe-col emotion-4 emotion-1"
      span="3"
    >
      <div
        style="background:#888;height:20px;line-height:20px;border:1px solid #111;margin-bottom:10px;font-size:14px;color:#FFF;text-align:center"
      >
        span: 3
      </div>
    </div>
    <div
      class="uc-fe-col emotion-6 emotion-1"
      span="4"
    >
      <div
        style="background:#888;height:20px;line-height:20px;border:1px solid #111;margin-bottom:10px;font-size:14px;color:#FFF;text-align:center"
      >
        span: 4
      </div>
    </div>
    <div
      class="uc-fe-col emotion-8 emotion-1"
      span="5"
    >
      <div
        style="background:#888;height:20px;line-height:20px;border:1px solid #111;margin-bottom:10px;font-size:14px;color:#FFF;text-align:center"
      >
        span: 5
      </div>
    </div>
    <div
      class="uc-fe-col emotion-10 emotion-1"
      span="6"
    >
      <div
        style="background:#888;height:20px;line-height:20px;border:1px solid #111;margin-bottom:10px;font-size:14px;color:#FFF;text-align:center"
      >
        span: 6
      </div>
    </div>
    <div
      class="uc-fe-col emotion-12 emotion-1"
      span="7"
    >
      <div
        style="background:#888;height:20px;line-height:20px;border:1px solid #111;margin-bottom:10px;font-size:14px;color:#FFF;text-align:center"
      >
        span: 7
      </div>
    </div>
    <div
      class="uc-fe-col emotion-14 emotion-1"
      span="8"
    >
      <div
        style="background:#888;height:20px;line-height:20px;border:1px solid #111;margin-bottom:10px;font-size:14px;color:#FFF;text-align:center"
      >
        span: 8
      </div>
    </div>
  </div>
</div>
`;

exports[`Grid demo -- row 1`] = `
.emotion-100 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 25%;
}

.emotion-98 .uc-fe-form-item {
  margin-bottom: 16px;
}

.emotion-98 .uc-fe-form-item:last-child {
  margin-bottom: 0;
}

.emotion-19 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.emotion-19:before,
.emotion-19:after {
  content: ' ';
  display: table;
}

.emotion-19:after {
  clear: both;
}

.emotion-19 > .uc-fe-col {
  padding-left: 8px;
  padding-right: 8px;
}

.emotion-1 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 16.66666667%;
  padding-top: 4px;
  line-height: 20px;
  word-break: break-all;
}

.emotion-16 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 83.33333333%;
}

.emotion-16 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 83.33333333%;
}

.emotion-90 {
  position: relative;
  box-sizing: border-box;
  border-radius: 2px;
  color: #0a1633;
  height: 28px;
  display: inline-block;
  vertical-align: middle;
  border: 1px solid #d2d6ea;
  padding-right: 22px;
  border-right-width: 0;
}

.emotion-90 .uc-fe-numberinput-input-wrap {
  position: relative;
}

.emotion-90 .uc-fe-numberinput-input {
  border: none;
  outline: none;
  padding: 0;
  margin: 0;
  color: inherit;
}

.emotion-90 .uc-fe-numberinput-suffix {
  color: #7a8baa;
  margin: 0 4px;
  display: inline-block;
  vertical-align: middle;
}

.emotion-90 .uc-fe-numberinput-handler-up,
.emotion-90 .uc-fe-numberinput-handler-down {
  position: absolute;
  box-sizing: border-box;
  text-align: center;
  border-radius: 2px;
  border-style: solid;
  cursor: pointer;
  color: #0a1633;
  border-color: #d2d6ea;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.08),0 1px 1px -1px rgba(0,0,0,0.30),0 1px 3px -1px rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.05);
  background: #ffffff;
  display: inline-block;
  vertical-align: middle;
}

.emotion-90 .uc-fe-numberinput-handler-up:hover,
.emotion-90 .uc-fe-numberinput-handler-down:hover {
  color: #3860f4;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05);
}

.emotion-90 .uc-fe-numberinput-handler-up.uc-fe-numberinput-handler-disabled,
.emotion-90 .uc-fe-numberinput-handler-down.uc-fe-numberinput-handler-disabled {
  cursor: not-allowed;
  pointer-events: none;
  color: #cccccc;
  border-color: #c3cad9;
}

.emotion-90 .uc-fe-numberinput-input {
  line-height: 26px;
  height: 26px;
  display: inline-block;
  vertical-align: middle;
}

.emotion-90 .uc-fe-numberinput-input::-webkit-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-90 .uc-fe-numberinput-input::-moz-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-90 .uc-fe-numberinput-input:-ms-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-90 .uc-fe-numberinput-input::placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-90:hover {
  border-color: #c3cad9;
}

.emotion-90 .uc-fe-numberinput-input-wrap {
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #fafafc;
}

.emotion-90 .uc-fe-numberinput-input-wrap:hover {
  background: #f6f6fb;
}

.emotion-90 .uc-fe-numberinput-input {
  padding: 0 0 0 8px;
  text-align: left;
  box-shadow: none;
  background: transparent;
  width: 34px;
}

.emotion-90 .uc-fe-numberinput-handler-up,
.emotion-90 .uc-fe-numberinput-handler-down {
  right: 0;
  box-sizing: content-box;
  border-radius: 0;
  height: 13px;
  line-height: 13px;
  width: 22px;
}

.emotion-90 .uc-fe-numberinput-handler-up:hover,
.emotion-90 .uc-fe-numberinput-handler-down:hover {
  color: #3860f4;
}

.emotion-90 .uc-fe-numberinput-handler-up {
  border-width: 0 0 0 1px;
  top: -1px;
  padding-top: 1px;
}

.emotion-90 .uc-fe-numberinput-handler-down {
  border-width: 1px 0 0 1px;
  bottom: 0;
  border-top-color: #c3cad9;
}

.emotion-86 {
  vertical-align: baseline;
}

.emotion-13 {
  position: relative;
  border-radius: 2px;
  box-sizing: border-box;
  cursor: pointer;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  background: #ffffff;
  height: 28px;
  width: 80px;
  padding: 4px;
  border: 1px solid #c3cad9;
  border-width: 1px;
  line-height: 16px;
}

.emotion-13:hover {
  border-color: #3357df;
}

.emotion-13:hover .emotion-10 {
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05);
}

.emotion-13 .emotion-10 {
  background: #ffffff;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.08),0 1px 1px -1px rgba(0,0,0,0.30),0 1px 3px -1px rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.05);
  width: 20px;
  height: 20px;
}

.emotion-13 .emotion-8 {
  background: #f44336;
  left: 13px;
  height: 10px;
}

.emotion-13 .emotion-12 {
  color: #526075;
  border: 1px solid #d2d6ea;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #f6f6fb;
}

.emotion-13 .emotion-4,
.emotion-13 .emotion-6 {
  line-height: 16px;
}

.emotion-13 .emotion-4 {
  padding-right: 20px;
}

.emotion-13 .emotion-6 {
  padding-left: 20px;
}

.emotion-13 .emotion-4 {
  display: none;
}

.emotion-11 {
  position: relative;
  height: 100%;
  width: 100%;
  border-radius: 2px;
  box-sizing: border-box;
}

.emotion-3 {
  width: 100%;
  height: 100%;
  text-align: center;
  line-height: 22px;
  box-sizing: border-box;
  display: block;
}

.emotion-5 {
  width: 100%;
  height: 100%;
  text-align: center;
  line-height: 22px;
  box-sizing: border-box;
  display: block;
}

.emotion-9 {
  position: absolute;
  display: inline-block;
  left: -1px;
  top: -2px;
  border-radius: 2px;
  box-sizing: border-box;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.emotion-7 {
  position: absolute;
  display: inline-block;
  left: 18px;
  top: 4px;
  width: 2px;
  height: 16px;
  border-radius: 1px;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.emotion-39 {
  position: relative;
  margin-bottom: -8px;
}

.emotion-39 .uc-fe-radio-styletype-default,
.emotion-39 .uc-fe-radio-styletype-tag {
  margin-right: 8px;
  margin-bottom: 8px;
}

.emotion-39 .uc-fe-radio-styletype-default:last-child,
.emotion-39 .uc-fe-radio-styletype-tag:last-child {
  margin-right: 0;
}

.emotion-39 .uc-fe-radio-styletype-card {
  margin-right: 12px;
  margin-bottom: 8px;
}

.emotion-39 .uc-fe-radio-styletype-card:last-child {
  margin-right: 0;
}

.emotion-39 .uc-fe-radio-styletype-text+.uc-fe-radio-styletype-text {
  margin-left: -1px;
}

.emotion-39 .uc-fe-radio-styletype-button {
  margin-right: -1px;
  margin-bottom: 8px;
}

.emotion-39 .uc-fe-radio-styletype-button:first-of-type {
  border-radius: 2px 0 0 2px;
}

.emotion-39 .uc-fe-radio-styletype-button:last-of-type {
  border-radius: 0 2px 2px 0;
  margin-right: 0;
}

.emotion-27 {
  color: #526075;
  font-size: 12px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  min-height: 28px;
  line-height: 28px;
  font-size: 0;
  color: #0a1633;
}

.emotion-27 > * {
  font-size: 12px;
}

.emotion-27 .uc-fe-radio-icon-wrap {
  display: inline-block;
  box-sizing: border-box;
  overflow: hidden;
  position: relative;
  width: 14px;
  height: 14px;
  border: 1px solid #c3cad9;
  border-radius: 8px;
  vertical-align: middle;
}

.emotion-27 .uc-fe-radio-icon-wrap .uc-fe-radio-icon {
  visibility: hidden;
  opacity: 0;
  position: absolute;
  top: -1px;
  left: -1px;
}

.emotion-27 .uc-fe-radio-content {
  display: inline-block;
  vertical-align: middle;
  max-height: 100%;
  margin-left: 8px;
}

.emotion-27:hover .uc-fe-radio-icon-wrap,
.emotion-27.uc-fe-radio-checked .uc-fe-radio-icon-wrap {
  border-color: #3860f4;
}

.emotion-27.uc-fe-radio-checked .uc-fe-radio-icon {
  visibility: visible;
  opacity: 1;
  fill: #3860f4;
}

.emotion-27.uc-fe-radio-disabled {
  cursor: default;
  color: #cccccc;
}

.emotion-27.uc-fe-radio-disabled .uc-fe-radio-icon-wrap {
  border-color: #d9d9d9;
  background: #f7f7f7;
}

.emotion-27.uc-fe-radio-disabled.uc-fe-radio-checked .uc-fe-radio-icon {
  fill: #cccccc;
}

.emotion-27.uc-fe-radio-disabled.uc-fe-radio-checked .uc-fe-radio-icon-wrap {
  background: none;
}

.emotion-24 {
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  width: 14px;
  height: 14px;
}

.emotion-106 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-106:before,
.emotion-106:after {
  content: ' ';
  display: table;
}

.emotion-106:after {
  clear: both;
}

.emotion-106 > .uc-fe-col {
  padding-left: 8px;
  padding-right: 8px;
}

.emotion-100 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 25%;
}

.emotion-98 .uc-fe-form-item {
  margin-bottom: 16px;
}

.emotion-98 .uc-fe-form-item:last-child {
  margin-bottom: 0;
}

.emotion-19 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.emotion-19:before,
.emotion-19:after {
  content: ' ';
  display: table;
}

.emotion-19:after {
  clear: both;
}

.emotion-19 > .uc-fe-col {
  padding-left: 8px;
  padding-right: 8px;
}

.emotion-1 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 16.66666667%;
  padding-top: 4px;
  line-height: 20px;
  word-break: break-all;
}

.emotion-16 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 83.33333333%;
}

.emotion-16 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 83.33333333%;
}

.emotion-90 {
  position: relative;
  box-sizing: border-box;
  border-radius: 2px;
  color: #0a1633;
  height: 28px;
  display: inline-block;
  vertical-align: middle;
  border: 1px solid #d2d6ea;
  padding-right: 22px;
  border-right-width: 0;
}

.emotion-90 .uc-fe-numberinput-input-wrap {
  position: relative;
}

.emotion-90 .uc-fe-numberinput-input {
  border: none;
  outline: none;
  padding: 0;
  margin: 0;
  color: inherit;
}

.emotion-90 .uc-fe-numberinput-suffix {
  color: #7a8baa;
  margin: 0 4px;
  display: inline-block;
  vertical-align: middle;
}

.emotion-90 .uc-fe-numberinput-handler-up,
.emotion-90 .uc-fe-numberinput-handler-down {
  position: absolute;
  box-sizing: border-box;
  text-align: center;
  border-radius: 2px;
  border-style: solid;
  cursor: pointer;
  color: #0a1633;
  border-color: #d2d6ea;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.08),0 1px 1px -1px rgba(0,0,0,0.30),0 1px 3px -1px rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.05);
  background: #ffffff;
  display: inline-block;
  vertical-align: middle;
}

.emotion-90 .uc-fe-numberinput-handler-up:hover,
.emotion-90 .uc-fe-numberinput-handler-down:hover {
  color: #3860f4;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05);
}

.emotion-90 .uc-fe-numberinput-handler-up.uc-fe-numberinput-handler-disabled,
.emotion-90 .uc-fe-numberinput-handler-down.uc-fe-numberinput-handler-disabled {
  cursor: not-allowed;
  pointer-events: none;
  color: #cccccc;
  border-color: #c3cad9;
}

.emotion-90 .uc-fe-numberinput-input {
  line-height: 26px;
  height: 26px;
  display: inline-block;
  vertical-align: middle;
}

.emotion-90 .uc-fe-numberinput-input::-webkit-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-90 .uc-fe-numberinput-input::-moz-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-90 .uc-fe-numberinput-input:-ms-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-90 .uc-fe-numberinput-input::placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-90:hover {
  border-color: #c3cad9;
}

.emotion-90 .uc-fe-numberinput-input-wrap {
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #fafafc;
}

.emotion-90 .uc-fe-numberinput-input-wrap:hover {
  background: #f6f6fb;
}

.emotion-90 .uc-fe-numberinput-input {
  padding: 0 0 0 8px;
  text-align: left;
  box-shadow: none;
  background: transparent;
  width: 34px;
}

.emotion-90 .uc-fe-numberinput-handler-up,
.emotion-90 .uc-fe-numberinput-handler-down {
  right: 0;
  box-sizing: content-box;
  border-radius: 0;
  height: 13px;
  line-height: 13px;
  width: 22px;
}

.emotion-90 .uc-fe-numberinput-handler-up:hover,
.emotion-90 .uc-fe-numberinput-handler-down:hover {
  color: #3860f4;
}

.emotion-90 .uc-fe-numberinput-handler-up {
  border-width: 0 0 0 1px;
  top: -1px;
  padding-top: 1px;
}

.emotion-90 .uc-fe-numberinput-handler-down {
  border-width: 1px 0 0 1px;
  bottom: 0;
  border-top-color: #c3cad9;
}

.emotion-86 {
  vertical-align: baseline;
}

.emotion-13 {
  position: relative;
  border-radius: 2px;
  box-sizing: border-box;
  cursor: pointer;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  background: #ffffff;
  height: 28px;
  width: 80px;
  padding: 4px;
  border: 1px solid #c3cad9;
  border-width: 1px;
  line-height: 16px;
}

.emotion-13:hover {
  border-color: #3357df;
}

.emotion-13:hover .emotion-10 {
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05);
}

.emotion-13 .emotion-10 {
  background: #ffffff;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.08),0 1px 1px -1px rgba(0,0,0,0.30),0 1px 3px -1px rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.05);
  width: 20px;
  height: 20px;
}

.emotion-13 .emotion-8 {
  background: #f44336;
  left: 13px;
  height: 10px;
}

.emotion-13 .emotion-12 {
  color: #526075;
  border: 1px solid #d2d6ea;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #f6f6fb;
}

.emotion-13 .emotion-4,
.emotion-13 .emotion-6 {
  line-height: 16px;
}

.emotion-13 .emotion-4 {
  padding-right: 20px;
}

.emotion-13 .emotion-6 {
  padding-left: 20px;
}

.emotion-13 .emotion-4 {
  display: none;
}

.emotion-11 {
  position: relative;
  height: 100%;
  width: 100%;
  border-radius: 2px;
  box-sizing: border-box;
}

.emotion-3 {
  width: 100%;
  height: 100%;
  text-align: center;
  line-height: 22px;
  box-sizing: border-box;
  display: block;
}

.emotion-5 {
  width: 100%;
  height: 100%;
  text-align: center;
  line-height: 22px;
  box-sizing: border-box;
  display: block;
}

.emotion-9 {
  position: absolute;
  display: inline-block;
  left: -1px;
  top: -2px;
  border-radius: 2px;
  box-sizing: border-box;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.emotion-7 {
  position: absolute;
  display: inline-block;
  left: 18px;
  top: 4px;
  width: 2px;
  height: 16px;
  border-radius: 1px;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.emotion-39 {
  position: relative;
  margin-bottom: -8px;
}

.emotion-39 .uc-fe-radio-styletype-default,
.emotion-39 .uc-fe-radio-styletype-tag {
  margin-right: 8px;
  margin-bottom: 8px;
}

.emotion-39 .uc-fe-radio-styletype-default:last-child,
.emotion-39 .uc-fe-radio-styletype-tag:last-child {
  margin-right: 0;
}

.emotion-39 .uc-fe-radio-styletype-card {
  margin-right: 12px;
  margin-bottom: 8px;
}

.emotion-39 .uc-fe-radio-styletype-card:last-child {
  margin-right: 0;
}

.emotion-39 .uc-fe-radio-styletype-text+.uc-fe-radio-styletype-text {
  margin-left: -1px;
}

.emotion-39 .uc-fe-radio-styletype-button {
  margin-right: -1px;
  margin-bottom: 8px;
}

.emotion-39 .uc-fe-radio-styletype-button:first-of-type {
  border-radius: 2px 0 0 2px;
}

.emotion-39 .uc-fe-radio-styletype-button:last-of-type {
  border-radius: 0 2px 2px 0;
  margin-right: 0;
}

.emotion-27 {
  color: #526075;
  font-size: 12px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  min-height: 28px;
  line-height: 28px;
  font-size: 0;
  color: #0a1633;
}

.emotion-27 > * {
  font-size: 12px;
}

.emotion-27 .uc-fe-radio-icon-wrap {
  display: inline-block;
  box-sizing: border-box;
  overflow: hidden;
  position: relative;
  width: 14px;
  height: 14px;
  border: 1px solid #c3cad9;
  border-radius: 8px;
  vertical-align: middle;
}

.emotion-27 .uc-fe-radio-icon-wrap .uc-fe-radio-icon {
  visibility: hidden;
  opacity: 0;
  position: absolute;
  top: -1px;
  left: -1px;
}

.emotion-27 .uc-fe-radio-content {
  display: inline-block;
  vertical-align: middle;
  max-height: 100%;
  margin-left: 8px;
}

.emotion-27:hover .uc-fe-radio-icon-wrap,
.emotion-27.uc-fe-radio-checked .uc-fe-radio-icon-wrap {
  border-color: #3860f4;
}

.emotion-27.uc-fe-radio-checked .uc-fe-radio-icon {
  visibility: visible;
  opacity: 1;
  fill: #3860f4;
}

.emotion-27.uc-fe-radio-disabled {
  cursor: default;
  color: #cccccc;
}

.emotion-27.uc-fe-radio-disabled .uc-fe-radio-icon-wrap {
  border-color: #d9d9d9;
  background: #f7f7f7;
}

.emotion-27.uc-fe-radio-disabled.uc-fe-radio-checked .uc-fe-radio-icon {
  fill: #cccccc;
}

.emotion-27.uc-fe-radio-disabled.uc-fe-radio-checked .uc-fe-radio-icon-wrap {
  background: none;
}

.emotion-24 {
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  width: 14px;
  height: 14px;
}

.emotion-106 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-106:before,
.emotion-106:after {
  content: ' ';
  display: table;
}

.emotion-106:after {
  clear: both;
}

.emotion-106 > .uc-fe-col {
  padding-left: 8px;
  padding-right: 8px;
}

<div>
  <form
    class="uc-fe-form demo-form emotion-98 emotion-99"
  >
    <div
      class="uc-fe-row uc-fe-form-item emotion-18 emotion-19 emotion-20"
    >
      <div
        class="uc-fe-col uc-fe-form-label emotion-0 emotion-1 emotion-2"
        span="2"
      >
        flex
      </div>
      <div
        class="uc-fe-col uc-fe-form-controller emotion-15 emotion-16 emotion-2"
        span="10"
      >
        <div
          class=" emotion-13 emotion-14"
        >
          <div
            class="emotion-11 emotion-12"
          >
            <span
              class="emotion-3 emotion-4"
            >
              ON
            </span>
            <span
              class="emotion-5 emotion-6"
            >
              OFF
            </span>
            <span
              class="emotion-9 emotion-10"
            >
              <span
                class="emotion-7 emotion-8"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="uc-fe-row uc-fe-form-item emotion-18 emotion-19 emotion-20"
    >
      <div
        class="uc-fe-col uc-fe-form-label emotion-0 emotion-1 emotion-2"
        span="2"
      >
        align
      </div>
      <div
        class="uc-fe-col uc-fe-form-controller emotion-15 emotion-16 emotion-2"
        span="10"
      >
        <div
          class="emotion-39 emotion-282"
        >
          <span
            checked=""
            class="uc-fe-radio uc-fe-radio-checked uc-fe-radio-size-md uc-fe-radio-styletype-default emotion-26 emotion-27 emotion-28"
          >
            <span
              class="uc-fe-radio-icon-wrap"
            >
              <svg
                class="uc-fe-radio-icon emotion-24 emotion-25"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="6"
                />
              </svg>
            </span>
            <span
              class="uc-fe-radio-content"
            >
              top
            </span>
          </span>
          <span
            class="uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default emotion-26 emotion-27 emotion-28"
          >
            <span
              class="uc-fe-radio-icon-wrap"
            >
              <svg
                class="uc-fe-radio-icon emotion-24 emotion-25"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="6"
                />
              </svg>
            </span>
            <span
              class="uc-fe-radio-content"
            >
              middle
            </span>
          </span>
          <span
            class="uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default emotion-26 emotion-27 emotion-28"
          >
            <span
              class="uc-fe-radio-icon-wrap"
            >
              <svg
                class="uc-fe-radio-icon emotion-24 emotion-25"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="6"
                />
              </svg>
            </span>
            <span
              class="uc-fe-radio-content"
            >
              bottom
            </span>
          </span>
        </div>
      </div>
    </div>
    <div
      class="uc-fe-row uc-fe-form-item emotion-18 emotion-19 emotion-20"
    >
      <div
        class="uc-fe-col uc-fe-form-label emotion-0 emotion-1 emotion-2"
        span="2"
      >
        justify
      </div>
      <div
        class="uc-fe-col uc-fe-form-controller emotion-15 emotion-16 emotion-2"
        span="10"
      >
        <div
          class="emotion-39 emotion-282"
        >
          <span
            checked=""
            class="uc-fe-radio uc-fe-radio-checked uc-fe-radio-size-md uc-fe-radio-styletype-default emotion-26 emotion-27 emotion-28"
          >
            <span
              class="uc-fe-radio-icon-wrap"
            >
              <svg
                class="uc-fe-radio-icon emotion-24 emotion-25"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="6"
                />
              </svg>
            </span>
            <span
              class="uc-fe-radio-content"
            >
              start
            </span>
          </span>
          <span
            class="uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default emotion-26 emotion-27 emotion-28"
          >
            <span
              class="uc-fe-radio-icon-wrap"
            >
              <svg
                class="uc-fe-radio-icon emotion-24 emotion-25"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="6"
                />
              </svg>
            </span>
            <span
              class="uc-fe-radio-content"
            >
              end
            </span>
          </span>
          <span
            class="uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default emotion-26 emotion-27 emotion-28"
          >
            <span
              class="uc-fe-radio-icon-wrap"
            >
              <svg
                class="uc-fe-radio-icon emotion-24 emotion-25"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="6"
                />
              </svg>
            </span>
            <span
              class="uc-fe-radio-content"
            >
              center
            </span>
          </span>
          <span
            class="uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default emotion-26 emotion-27 emotion-28"
          >
            <span
              class="uc-fe-radio-icon-wrap"
            >
              <svg
                class="uc-fe-radio-icon emotion-24 emotion-25"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="6"
                />
              </svg>
            </span>
            <span
              class="uc-fe-radio-content"
            >
              space-around
            </span>
          </span>
          <span
            class="uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default emotion-26 emotion-27 emotion-28"
          >
            <span
              class="uc-fe-radio-icon-wrap"
            >
              <svg
                class="uc-fe-radio-icon emotion-24 emotion-25"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="6"
                />
              </svg>
            </span>
            <span
              class="uc-fe-radio-content"
            >
              space-between
            </span>
          </span>
        </div>
      </div>
    </div>
    <div
      class="uc-fe-row uc-fe-form-item emotion-18 emotion-19 emotion-20"
    >
      <div
        class="uc-fe-col uc-fe-form-label emotion-0 emotion-1 emotion-2"
        span="2"
      >
        gutter
      </div>
      <div
        class="uc-fe-col uc-fe-form-controller emotion-15 emotion-16 emotion-2"
        span="10"
      >
        <div
          class="uc-fe-numberinput uc-fe-numberinput-styletype-default emotion-90 emotion-91"
        >
          <div>
            <span
              class="uc-fe-numberinput-handler-up"
              unselectable="unselectable"
            >
              <i
                class="uc-fe-icon icon__caret-up emotion-86 emotion-87"
              />
            </span>
            <span
              class="uc-fe-numberinput-handler-down"
              unselectable="unselectable"
            >
              <i
                class="uc-fe-icon icon__caret-down emotion-86 emotion-87"
              />
            </span>
          </div>
          <div
            class="uc-fe-numberinput-input-wrap"
          >
            <input
              autocomplete="off"
              class="uc-fe-numberinput-input"
              min="0"
              step="1"
              value="16"
            />
          </div>
        </div>
      </div>
    </div>
  </form>
  <div
    style="height:40px;border:1px solid #ccc"
  >
    <div
      class="uc-fe-row emotion-106 emotion-20"
      style="height:100%"
    >
      <div
        class="uc-fe-col emotion-100 emotion-2"
        span="3"
      >
        <div
          style="background:#888;height:20px;border:1px solid #111"
        />
      </div>
      <div
        class="uc-fe-col emotion-100 emotion-2"
        span="3"
      >
        <div
          style="background:#888;height:20px;border:1px solid #111"
        />
      </div>
      <div
        class="uc-fe-col emotion-100 emotion-2"
        span="3"
      >
        <div
          style="background:#888;height:20px;border:1px solid #111"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Grid demo -- row-align 1`] = `
.emotion-0 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 33.33333333%;
}

.emotion-4 {
  position: relative;
  display: block;
  height: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row wrap;
  -ms-flex-flow: row wrap;
  flex-flow: row wrap;
  margin-left: -8px;
  margin-right: -8px;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-4 > .uc-fe-col {
  padding-left: 8px;
  padding-right: 8px;
}

.emotion-10 {
  position: relative;
  display: block;
  height: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row wrap;
  -ms-flex-flow: row wrap;
  flex-flow: row wrap;
  margin-left: -8px;
  margin-right: -8px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-10 > .uc-fe-col {
  padding-left: 8px;
  padding-right: 8px;
}

.emotion-16 {
  position: relative;
  display: block;
  height: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row wrap;
  -ms-flex-flow: row wrap;
  flex-flow: row wrap;
  margin-left: -8px;
  margin-right: -8px;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.emotion-16 > .uc-fe-col {
  padding-left: 8px;
  padding-right: 8px;
}

.emotion-0 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 33.33333333%;
}

.emotion-4 {
  position: relative;
  display: block;
  height: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row wrap;
  -ms-flex-flow: row wrap;
  flex-flow: row wrap;
  margin-left: -8px;
  margin-right: -8px;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-4 > .uc-fe-col {
  padding-left: 8px;
  padding-right: 8px;
}

.emotion-10 {
  position: relative;
  display: block;
  height: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row wrap;
  -ms-flex-flow: row wrap;
  flex-flow: row wrap;
  margin-left: -8px;
  margin-right: -8px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-10 > .uc-fe-col {
  padding-left: 8px;
  padding-right: 8px;
}

.emotion-16 {
  position: relative;
  display: block;
  height: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row wrap;
  -ms-flex-flow: row wrap;
  flex-flow: row wrap;
  margin-left: -8px;
  margin-right: -8px;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.emotion-16 > .uc-fe-col {
  padding-left: 8px;
  padding-right: 8px;
}

<div>
  <div
    class="uc-fe-row emotion-4 emotion-5"
    style="margin-bottom:10px;height:40px;border:1px solid #ccc"
    type="flex"
  >
    <div
      class="uc-fe-col emotion-0 emotion-1"
      span="4"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111"
      />
    </div>
    <div
      class="uc-fe-col emotion-0 emotion-1"
      span="4"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111"
      />
    </div>
  </div>
  <div
    class="uc-fe-row emotion-10 emotion-5"
    style="margin-bottom:10px;height:40px;border:1px solid #ccc"
    type="flex"
  >
    <div
      class="uc-fe-col emotion-0 emotion-1"
      span="4"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111"
      />
    </div>
    <div
      class="uc-fe-col emotion-0 emotion-1"
      span="4"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111"
      />
    </div>
  </div>
  <div
    class="uc-fe-row emotion-16 emotion-5"
    style="margin-bottom:10px;height:40px;border:1px solid #ccc"
    type="flex"
  >
    <div
      class="uc-fe-col emotion-0 emotion-1"
      span="4"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111"
      />
    </div>
    <div
      class="uc-fe-col emotion-0 emotion-1"
      span="4"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111"
      />
    </div>
  </div>
</div>
`;

exports[`Grid demo -- row-base 1`] = `
.emotion-4 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.emotion-4:before,
.emotion-4:after {
  content: ' ';
  display: table;
}

.emotion-4:after {
  clear: both;
}

.emotion-4 > .uc-fe-col {
  padding-left: 8px;
  padding-right: 8px;
}

.emotion-12 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 8.33333333%;
}

.emotion-14 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 16.66666667%;
}

.emotion-8 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 25%;
}

.emotion-16 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 33.33333333%;
}

.emotion-18 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 41.66666667%;
}

.emotion-0 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 50%;
}

.emotion-6 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 66.66666667%;
}

.emotion-4 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.emotion-4:before,
.emotion-4:after {
  content: ' ';
  display: table;
}

.emotion-4:after {
  clear: both;
}

.emotion-4 > .uc-fe-col {
  padding-left: 8px;
  padding-right: 8px;
}

.emotion-12 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 8.33333333%;
}

.emotion-14 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 16.66666667%;
}

.emotion-8 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 25%;
}

.emotion-16 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 33.33333333%;
}

.emotion-18 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 41.66666667%;
}

.emotion-0 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 50%;
}

.emotion-6 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 66.66666667%;
}

<div>
  <div
    class="uc-fe-row emotion-4 emotion-5"
    style="margin-bottom:10px"
  >
    <div
      class="uc-fe-col emotion-0 emotion-1"
      span="6"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111"
      />
    </div>
    <div
      class="uc-fe-col emotion-0 emotion-1"
      span="6"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111"
      />
    </div>
  </div>
  <div
    class="uc-fe-row emotion-4 emotion-5"
    style="margin-bottom:10px"
  >
    <div
      class="uc-fe-col emotion-6 emotion-1"
      span="8"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111"
      />
    </div>
    <div
      class="uc-fe-col emotion-8 emotion-1"
      span="3"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111"
      />
    </div>
  </div>
  <div
    class="uc-fe-row emotion-4 emotion-5"
    style="margin-bottom:10px"
  >
    <div
      class="uc-fe-col emotion-12 emotion-1"
      span="1"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111"
      />
    </div>
    <div
      class="uc-fe-col emotion-14 emotion-1"
      span="2"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111"
      />
    </div>
    <div
      class="uc-fe-col emotion-16 emotion-1"
      span="4"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111"
      />
    </div>
    <div
      class="uc-fe-col emotion-18 emotion-1"
      span="5"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111"
      />
    </div>
  </div>
  <div
    class="uc-fe-row emotion-4 emotion-5"
    style="margin-bottom:10px"
  >
    <div
      class="uc-fe-col emotion-16 emotion-1"
      span="4"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111"
      />
    </div>
    <div
      class="uc-fe-col emotion-14 emotion-1"
      span="2"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111"
      />
    </div>
    <div
      class="uc-fe-col emotion-8 emotion-1"
      span="3"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111"
      />
    </div>
    <div
      class="uc-fe-col emotion-14 emotion-1"
      span="2"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111"
      />
    </div>
    <div
      class="uc-fe-col emotion-12 emotion-1"
      span="1"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111"
      />
    </div>
  </div>
</div>
`;

exports[`Grid demo -- row-gutter 1`] = `
.emotion-48 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.emotion-48:before,
.emotion-48:after {
  content: ' ';
  display: table;
}

.emotion-48:after {
  clear: both;
}

.emotion-48 > .uc-fe-col {
  padding-left: 8px;
  padding-right: 8px;
}

.emotion-0 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 25%;
}

.emotion-8 {
  position: relative;
  display: block;
  height: auto;
  margin-left: 0px;
  margin-right: 0px;
}

.emotion-8:before,
.emotion-8:after {
  content: ' ';
  display: table;
}

.emotion-8:after {
  clear: both;
}

.emotion-8 > .uc-fe-col {
  padding-left: 0px;
  padding-right: 0px;
}

.emotion-18 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -1px;
  margin-right: -1px;
}

.emotion-18:before,
.emotion-18:after {
  content: ' ';
  display: table;
}

.emotion-18:after {
  clear: both;
}

.emotion-18 > .uc-fe-col {
  padding-left: 1px;
  padding-right: 1px;
}

.emotion-28 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -2px;
  margin-right: -2px;
}

.emotion-28:before,
.emotion-28:after {
  content: ' ';
  display: table;
}

.emotion-28:after {
  clear: both;
}

.emotion-28 > .uc-fe-col {
  padding-left: 2px;
  padding-right: 2px;
}

.emotion-38 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -4px;
  margin-right: -4px;
}

.emotion-38:before,
.emotion-38:after {
  content: ' ';
  display: table;
}

.emotion-38:after {
  clear: both;
}

.emotion-38 > .uc-fe-col {
  padding-left: 4px;
  padding-right: 4px;
}

.emotion-48 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.emotion-48:before,
.emotion-48:after {
  content: ' ';
  display: table;
}

.emotion-48:after {
  clear: both;
}

.emotion-48 > .uc-fe-col {
  padding-left: 8px;
  padding-right: 8px;
}

.emotion-0 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 25%;
}

.emotion-8 {
  position: relative;
  display: block;
  height: auto;
  margin-left: 0px;
  margin-right: 0px;
}

.emotion-8:before,
.emotion-8:after {
  content: ' ';
  display: table;
}

.emotion-8:after {
  clear: both;
}

.emotion-8 > .uc-fe-col {
  padding-left: 0px;
  padding-right: 0px;
}

.emotion-18 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -1px;
  margin-right: -1px;
}

.emotion-18:before,
.emotion-18:after {
  content: ' ';
  display: table;
}

.emotion-18:after {
  clear: both;
}

.emotion-18 > .uc-fe-col {
  padding-left: 1px;
  padding-right: 1px;
}

.emotion-28 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -2px;
  margin-right: -2px;
}

.emotion-28:before,
.emotion-28:after {
  content: ' ';
  display: table;
}

.emotion-28:after {
  clear: both;
}

.emotion-28 > .uc-fe-col {
  padding-left: 2px;
  padding-right: 2px;
}

.emotion-38 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -4px;
  margin-right: -4px;
}

.emotion-38:before,
.emotion-38:after {
  content: ' ';
  display: table;
}

.emotion-38:after {
  clear: both;
}

.emotion-38 > .uc-fe-col {
  padding-left: 4px;
  padding-right: 4px;
}

<div>
  <div
    class="uc-fe-row emotion-8 emotion-9"
    style="margin-bottom:10px"
  >
    <div
      class="uc-fe-col emotion-0 emotion-1"
      span="3"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111"
      />
    </div>
    <div
      class="uc-fe-col emotion-0 emotion-1"
      span="3"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111"
      />
    </div>
    <div
      class="uc-fe-col emotion-0 emotion-1"
      span="3"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111"
      />
    </div>
    <div
      class="uc-fe-col emotion-0 emotion-1"
      span="3"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111"
      />
    </div>
  </div>
  <div
    class="uc-fe-row emotion-18 emotion-9"
    style="margin-bottom:10px"
  >
    <div
      class="uc-fe-col emotion-0 emotion-1"
      span="3"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111"
      />
    </div>
    <div
      class="uc-fe-col emotion-0 emotion-1"
      span="3"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111"
      />
    </div>
    <div
      class="uc-fe-col emotion-0 emotion-1"
      span="3"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111"
      />
    </div>
    <div
      class="uc-fe-col emotion-0 emotion-1"
      span="3"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111"
      />
    </div>
  </div>
  <div
    class="uc-fe-row emotion-28 emotion-9"
    style="margin-bottom:10px"
  >
    <div
      class="uc-fe-col emotion-0 emotion-1"
      span="3"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111"
      />
    </div>
    <div
      class="uc-fe-col emotion-0 emotion-1"
      span="3"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111"
      />
    </div>
    <div
      class="uc-fe-col emotion-0 emotion-1"
      span="3"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111"
      />
    </div>
    <div
      class="uc-fe-col emotion-0 emotion-1"
      span="3"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111"
      />
    </div>
  </div>
  <div
    class="uc-fe-row emotion-38 emotion-9"
    style="margin-bottom:10px"
  >
    <div
      class="uc-fe-col emotion-0 emotion-1"
      span="3"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111"
      />
    </div>
    <div
      class="uc-fe-col emotion-0 emotion-1"
      span="3"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111"
      />
    </div>
    <div
      class="uc-fe-col emotion-0 emotion-1"
      span="3"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111"
      />
    </div>
    <div
      class="uc-fe-col emotion-0 emotion-1"
      span="3"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111"
      />
    </div>
  </div>
  <div
    class="uc-fe-row emotion-48 emotion-9"
    style="margin-bottom:10px"
  >
    <div
      class="uc-fe-col emotion-0 emotion-1"
      span="3"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111"
      />
    </div>
    <div
      class="uc-fe-col emotion-0 emotion-1"
      span="3"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111"
      />
    </div>
    <div
      class="uc-fe-col emotion-0 emotion-1"
      span="3"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111"
      />
    </div>
    <div
      class="uc-fe-col emotion-0 emotion-1"
      span="3"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111"
      />
    </div>
  </div>
</div>
`;

exports[`Grid demo -- row-justify 1`] = `
.emotion-0 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 16.66666667%;
}

.emotion-8 {
  position: relative;
  display: block;
  height: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row wrap;
  -ms-flex-flow: row wrap;
  flex-flow: row wrap;
  margin-left: -8px;
  margin-right: -8px;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-8 > .uc-fe-col {
  padding-left: 8px;
  padding-right: 8px;
}

.emotion-18 {
  position: relative;
  display: block;
  height: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row wrap;
  -ms-flex-flow: row wrap;
  flex-flow: row wrap;
  margin-left: -8px;
  margin-right: -8px;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-18 > .uc-fe-col {
  padding-left: 8px;
  padding-right: 8px;
}

.emotion-28 {
  position: relative;
  display: block;
  height: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row wrap;
  -ms-flex-flow: row wrap;
  flex-flow: row wrap;
  margin-left: -8px;
  margin-right: -8px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-28 > .uc-fe-col {
  padding-left: 8px;
  padding-right: 8px;
}

.emotion-38 {
  position: relative;
  display: block;
  height: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row wrap;
  -ms-flex-flow: row wrap;
  flex-flow: row wrap;
  margin-left: -8px;
  margin-right: -8px;
  -webkit-box-pack: space-around;
  -webkit-justify-content: space-around;
  -ms-flex-pack: space-around;
  justify-content: space-around;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-38 > .uc-fe-col {
  padding-left: 8px;
  padding-right: 8px;
}

.emotion-48 {
  position: relative;
  display: block;
  height: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row wrap;
  -ms-flex-flow: row wrap;
  flex-flow: row wrap;
  margin-left: -8px;
  margin-right: -8px;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-48 > .uc-fe-col {
  padding-left: 8px;
  padding-right: 8px;
}

.emotion-0 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 16.66666667%;
}

.emotion-8 {
  position: relative;
  display: block;
  height: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row wrap;
  -ms-flex-flow: row wrap;
  flex-flow: row wrap;
  margin-left: -8px;
  margin-right: -8px;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-8 > .uc-fe-col {
  padding-left: 8px;
  padding-right: 8px;
}

.emotion-18 {
  position: relative;
  display: block;
  height: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row wrap;
  -ms-flex-flow: row wrap;
  flex-flow: row wrap;
  margin-left: -8px;
  margin-right: -8px;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-18 > .uc-fe-col {
  padding-left: 8px;
  padding-right: 8px;
}

.emotion-28 {
  position: relative;
  display: block;
  height: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row wrap;
  -ms-flex-flow: row wrap;
  flex-flow: row wrap;
  margin-left: -8px;
  margin-right: -8px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-28 > .uc-fe-col {
  padding-left: 8px;
  padding-right: 8px;
}

.emotion-38 {
  position: relative;
  display: block;
  height: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row wrap;
  -ms-flex-flow: row wrap;
  flex-flow: row wrap;
  margin-left: -8px;
  margin-right: -8px;
  -webkit-box-pack: space-around;
  -webkit-justify-content: space-around;
  -ms-flex-pack: space-around;
  justify-content: space-around;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-38 > .uc-fe-col {
  padding-left: 8px;
  padding-right: 8px;
}

.emotion-48 {
  position: relative;
  display: block;
  height: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row wrap;
  -ms-flex-flow: row wrap;
  flex-flow: row wrap;
  margin-left: -8px;
  margin-right: -8px;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-48 > .uc-fe-col {
  padding-left: 8px;
  padding-right: 8px;
}

<div>
  <div
    class="uc-fe-row emotion-8 emotion-9"
    style="margin-bottom:10px;height:40px;border:1px solid #ccc"
    type="flex"
  >
    <div
      class="uc-fe-col emotion-0 emotion-1"
      span="2"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111"
      />
    </div>
    <div
      class="uc-fe-col emotion-0 emotion-1"
      span="2"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111"
      />
    </div>
    <div
      class="uc-fe-col emotion-0 emotion-1"
      span="2"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111"
      />
    </div>
    <div
      class="uc-fe-col emotion-0 emotion-1"
      span="2"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111"
      />
    </div>
  </div>
  <div
    class="uc-fe-row emotion-18 emotion-9"
    style="margin-bottom:10px;height:40px;border:1px solid #ccc"
    type="flex"
  >
    <div
      class="uc-fe-col emotion-0 emotion-1"
      span="2"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111"
      />
    </div>
    <div
      class="uc-fe-col emotion-0 emotion-1"
      span="2"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111"
      />
    </div>
    <div
      class="uc-fe-col emotion-0 emotion-1"
      span="2"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111"
      />
    </div>
    <div
      class="uc-fe-col emotion-0 emotion-1"
      span="2"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111"
      />
    </div>
  </div>
  <div
    class="uc-fe-row emotion-28 emotion-9"
    style="margin-bottom:10px;height:40px;border:1px solid #ccc"
    type="flex"
  >
    <div
      class="uc-fe-col emotion-0 emotion-1"
      span="2"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111"
      />
    </div>
    <div
      class="uc-fe-col emotion-0 emotion-1"
      span="2"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111"
      />
    </div>
    <div
      class="uc-fe-col emotion-0 emotion-1"
      span="2"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111"
      />
    </div>
    <div
      class="uc-fe-col emotion-0 emotion-1"
      span="2"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111"
      />
    </div>
  </div>
  <div
    class="uc-fe-row emotion-38 emotion-9"
    style="margin-bottom:10px;height:40px;border:1px solid #ccc"
    type="flex"
  >
    <div
      class="uc-fe-col emotion-0 emotion-1"
      span="2"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111"
      />
    </div>
    <div
      class="uc-fe-col emotion-0 emotion-1"
      span="2"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111"
      />
    </div>
    <div
      class="uc-fe-col emotion-0 emotion-1"
      span="2"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111"
      />
    </div>
    <div
      class="uc-fe-col emotion-0 emotion-1"
      span="2"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111"
      />
    </div>
  </div>
  <div
    class="uc-fe-row emotion-48 emotion-9"
    style="margin-bottom:10px;height:40px;border:1px solid #ccc"
    type="flex"
  >
    <div
      class="uc-fe-col emotion-0 emotion-1"
      span="2"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111"
      />
    </div>
    <div
      class="uc-fe-col emotion-0 emotion-1"
      span="2"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111"
      />
    </div>
    <div
      class="uc-fe-col emotion-0 emotion-1"
      span="2"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111"
      />
    </div>
    <div
      class="uc-fe-col emotion-0 emotion-1"
      span="2"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111"
      />
    </div>
  </div>
</div>
`;
